# recall-ai

./: .gitignore  compose-native.yaml  plan.txt  questions.txt
backend/: .env.example  pyproject.toml
backend/src/app/: main.py
backend/src/app/config/: settings.py
backend/src/app/models/: chat_sessions.py  file.py  user.py  workspace.py
frontend/: package-lock.json  package.json
